@@ -905,7 +905,7 @@ void Ast::injectBindParameters (BindParameters& parameters) {
 
 AstNode* Ast::replaceVariables (AstNode* node,
                                 std::unordered_map<VariableId, Variable const*> const& replacements) {
-  auto func = [&](AstNode* node, void*) -> AstNode* {
+  auto visitor = [&](AstNode* node, void*) -> AstNode* {
     if (node == nullptr) {
       return nullptr;
     }
@@ -926,7 +926,7 @@ AstNode* Ast::replaceVariables (AstNode* node,
     return node;
   };
 
-  return traverse(node, func, nullptr);
+  return traverse(node, visitor, nullptr);
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -934,7 +934,19 @@ AstNode* Ast::replaceVariables (AstNode* node,
 ////////////////////////////////////////////////////////////////////////////////
 
 void Ast::optimize () {
-  auto func = [&](AstNode* node, void*) -> AstNode* {
+  auto preVisitor = [&](AstNode const* node, void* data) -> void {
+    if (node->type == NODE_TYPE_FILTER) {
+      *(static_cast<bool*>(data)) = true;
+    }
+  };
+
+  auto postVisitor = [&](AstNode const* node, void* data) -> void {
+    if (node->type == NODE_TYPE_FILTER) {
+      *(static_cast<bool*>(data)) = false;
+    }
+  };
+
+  auto visitor = [&](AstNode* node, void* data) -> AstNode* {
     if (node == nullptr) {
       return nullptr;
     }
@@ -952,7 +964,7 @@ void Ast::optimize () {
     // binary operators
     if (node->type == NODE_TYPE_OPERATOR_BINARY_AND ||
         node->type == NODE_TYPE_OPERATOR_BINARY_OR) {
-      return optimizeBinaryOperatorLogical(node);
+      return optimizeBinaryOperatorLogical(node, *(static_cast<bool*>(data)));
     }
     
     if (node->type == NODE_TYPE_OPERATOR_BINARY_EQ ||
@@ -1007,8 +1019,9 @@ void Ast::optimize () {
     return node;
   };
 
-  // optimization
-  _root = traverse(_root, func, nullptr);
+  // run the optimizations
+  bool canModifyResultType = false;
+  _root = traverse(_root, preVisitor, visitor, postVisitor, &canModifyResultType);
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -1016,7 +1029,7 @@ void Ast::optimize () {
 ////////////////////////////////////////////////////////////////////////////////
 
 std::unordered_set<Variable*> Ast::getReferencedVariables (AstNode const* node) {
-  auto func = [&](AstNode const* node, void* data) -> void {
+  auto visitor = [&](AstNode const* node, void* data) -> void {
     if (node == nullptr) {
       return;
     }
@@ -1037,7 +1050,7 @@ std::unordered_set<Variable*> Ast::getReferencedVariables (AstNode const* node) 
   };
 
   std::unordered_set<Variable*> result;  
-  traverse(node, func, &result); 
+  traverse(node, visitor, &result); 
 
   return result;
 }
@@ -1287,7 +1300,8 @@ AstNode* Ast::optimizeUnaryOperatorLogical (AstNode* node) {
 /// @brief optimizes the binary logical operators && and ||
 ////////////////////////////////////////////////////////////////////////////////
 
-AstNode* Ast::optimizeBinaryOperatorLogical (AstNode* node) {
+AstNode* Ast::optimizeBinaryOperatorLogical (AstNode* node,
+                                             bool canModifyResultType) {
   TRI_ASSERT(node != nullptr);
   TRI_ASSERT(node->type == NODE_TYPE_OPERATOR_BINARY_AND ||
              node->type == NODE_TYPE_OPERATOR_BINARY_OR);
@@ -1301,8 +1315,8 @@ AstNode* Ast::optimizeBinaryOperatorLogical (AstNode* node) {
   }
 
   if (lhs->isConstant()) {
+    // left operand is a constant value
     if (node->type == NODE_TYPE_OPERATOR_BINARY_AND) {
-      // left operand is a constant value
       if (lhs->isFalse()) {
         // return it if it is falsey
         return lhs;
@@ -1312,7 +1326,6 @@ AstNode* Ast::optimizeBinaryOperatorLogical (AstNode* node) {
       return rhs;
     }
     else if (node->type == NODE_TYPE_OPERATOR_BINARY_OR) {
-      // left operand is a constant value
       if (lhs->isTrue()) {
         // return it if it is trueish
         return lhs;
@@ -1320,6 +1333,29 @@ AstNode* Ast::optimizeBinaryOperatorLogical (AstNode* node) {
 
       // left-operand was falsey, now return right operand
       return rhs;
+    }
+  }
+
+  if (canModifyResultType) {
+    if (rhs->isConstant() && ! lhs->canThrow()) {
+      // right operand is a constant value
+      if (node->type == NODE_TYPE_OPERATOR_BINARY_AND) {
+        if (rhs->isFalse()) {
+          return createNodeValueBool(false);
+        }
+
+        // right-operand was trueish, now return it
+        return lhs;
+      }
+      else if (node->type == NODE_TYPE_OPERATOR_BINARY_OR) {
+        if (rhs->isTrue()) {
+          // return it if it is trueish
+          return createNodeValueBool(true);
+        }
+
+        // right-operand was falsey, now return left operand
+        return lhs;
+      }
     }
   }
 
@@ -1815,11 +1851,44 @@ AstNode* Ast::nodeFromJson (TRI_json_t const* json) {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief traverse the AST
+/// @brief traverse the AST, using pre- and post-order visitors
 ////////////////////////////////////////////////////////////////////////////////
 
 AstNode* Ast::traverse (AstNode* node, 
-                        std::function<AstNode*(AstNode*, void*)> func,
+                        std::function<void(AstNode const*, void*)> preVisitor,
+                        std::function<AstNode*(AstNode*, void*)> visitor,
+                        std::function<void(AstNode const*, void*)> postVisitor,
+                        void* data) {
+  if (node == nullptr) {
+    return nullptr;
+  }
+ 
+  preVisitor(node, data);
+  size_t const n = node->numMembers();
+
+  for (size_t i = 0; i < n; ++i) {
+    auto member = node->getMember(i);
+
+    if (member != nullptr) {
+      AstNode* result = traverse(member, preVisitor, visitor, postVisitor, data);
+
+      if (result != node) {
+        node->changeMember(i, result);
+      }
+    }
+  }
+
+  auto result = visitor(node, data);
+  postVisitor(node, data);
+  return result;
+}
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief traverse the AST, using a visitor
+////////////////////////////////////////////////////////////////////////////////
+
+AstNode* Ast::traverse (AstNode* node, 
+                        std::function<AstNode*(AstNode*, void*)> visitor,
                         void* data) {
   if (node == nullptr) {
     return nullptr;
@@ -1831,7 +1900,7 @@ AstNode* Ast::traverse (AstNode* node,
     auto member = node->getMember(i);
 
     if (member != nullptr) {
-      AstNode* result = traverse(member, func, data);
+      AstNode* result = traverse(member, visitor, data);
 
       if (result != node) {
         node->changeMember(i, result);
@@ -1839,15 +1908,15 @@ AstNode* Ast::traverse (AstNode* node,
     }
   }
 
-  return func(node, data);
+  return visitor(node, data);
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief traverse the AST, with const nodes
+/// @brief traverse the AST using a visitor, with const nodes
 ////////////////////////////////////////////////////////////////////////////////
 
 void Ast::traverse (AstNode const* node, 
-                    std::function<void(AstNode const*, void*)> func,
+                    std::function<void(AstNode const*, void*)> visitor,
                     void* data) {
   if (node == nullptr) {
     return;
@@ -1859,11 +1928,11 @@ void Ast::traverse (AstNode const* node,
     auto member = node->getMember(i);
 
     if (member != nullptr) {
-      traverse(const_cast<AstNode const*>(member), func, data);
+      traverse(const_cast<AstNode const*>(member), visitor, data);
     }
   }
 
-  func(node, data);
+  visitor(node, data);
 }
 
 ////////////////////////////////////////////////////////////////////////////////
