@@ -543,7 +543,7 @@ namespace triagens {
 /// @brief optimizes the binary logical operators && and ||
 ////////////////////////////////////////////////////////////////////////////////
 
-        AstNode* optimizeBinaryOperatorLogical (AstNode*);
+        AstNode* optimizeBinaryOperatorLogical (AstNode*, bool);
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief optimizes the binary relational operators <, <=, >, >=, ==, != and IN
@@ -602,7 +602,17 @@ namespace triagens {
         AstNode* nodeFromJson (TRI_json_t const*);
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief traverse the AST
+/// @brief traverse the AST, using pre- and post-order visitors
+////////////////////////////////////////////////////////////////////////////////
+
+        static AstNode* traverse (AstNode*,
+                                  std::function<void(AstNode const*, void*)>,
+                                  std::function<AstNode*(AstNode*, void*)>,
+                                  std::function<void(AstNode const*, void*)>,
+                                  void*);
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief traverse the AST using a visitor
 ////////////////////////////////////////////////////////////////////////////////
 
         static AstNode* traverse (AstNode*,
@@ -610,7 +620,7 @@ namespace triagens {
                                   void*);
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief traverse the AST, with const nodes
+/// @brief traverse the AST using a visitor, with const nodes
 ////////////////////////////////////////////////////////////////////////////////
 
         static void traverse (AstNode const*,
